<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialSheetFab.ToolBar">

            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_login_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_login_logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_logo_text" />

            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_large">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prosname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_user_form"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/ic_action_username"
                        android:hint="@string/uname"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>




                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:padding="4dp"
                        android:src="@drawable/ic_action_course" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:id="@+id/spinnerCountry"
                        android:background="@color/colorWhite" />

                </LinearLayout>-->


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prosemail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/ic_action_email"
                        android:hint="@string/umail"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ProsPhone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/ic_action_course"
                        android:hint="@string/uphone"
                        android:inputType="phone"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/proshousenme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_home"
                        android:hint="@string/uhousename"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_houseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/proshouseno"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_housenumber"
                        android:hint="@string/uhouseno"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prosstreet"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_street"
                        android:hint="@string/ustreet"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/proslocation"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_location"
                        android:hint="@string/ulocation"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prospostoffice"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_post"
                        android:hint="@string/upostoffice"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/proscity"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_cityname"
                        android:hint="@string/ucity"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prospin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_pin"
                        android:hint="@string/urpincode"
                        android:inputType="number"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/prosstate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hight_edittext"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/ic_action_username"
                        android:drawablePadding="@dimen/padding_normal"
                        android:drawableStart="@drawable/f_state"
                        android:hint="@string/Ustate"
                        android:inputType="text"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="@dimen/padding_normal"-->
                    <!--android:background="@color/colorWhite"-->
                    <!--android:orientation="horizontal">-->

                    <!--<ImageView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="@dimen/padding_large"-->
                        <!--android:padding="4dp"-->
                        <!--android:src="@drawable/ic_action_enquiry" />-->

                    <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:id="@+id/input_layout_enquiry"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content">-->

                        <!--<EditText-->
                            <!--android:id="@+id/edittextEnquiry"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="@dimen/hight_edittext"-->
                            <!--android:background="@color/colorWhite"-->
                            <!--android:gravity="start"-->
                            <!--android:hint="@string/hint_enquiry"-->
                            <!--android:inputType="text"-->
                            <!--android:padding="5dp" />-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                <!--</LinearLayout>-->

                <Button
                    android:id="@+id/btn_submit_pros"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hight_edittext"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/hint_submit"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/colorWhite" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
</LinearLayout>