<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/colorLightWhite"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialSheetFab.ToolBar">

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_login_top"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_login_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_logo_text" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_normal"
        android:padding="@dimen/padding_small">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="9dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/support_description"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/support_no_1"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorAccent" />

                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/support_no_2"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorAccent" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/support_email_1"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/support_email_2"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="9dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_normal"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageWeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_action_globe" />

                <ImageView
                    android:id="@+id/imageMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_action_mail" />

                <ImageView
                    android:id="@+id/imageFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_action_facebook" />

                <ImageView
                    android:id="@+id/imageCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_action_phone_start" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>